--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
         <!-- font awesome CSS -->
         <link rel="stylesheet" href="{% static 'css/all.css' %}">
+
         <!-- flaticon CSS -->
         <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
         <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
@@ -23,13 +24,14 @@
         <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
         <!-- swiper CSS -->
         <link rel="stylesheet" href="{% static 'css/slick.css' %}">
+
         <!-- style CSS -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
         {% block extra_link %}{% endblock %}
     </head>
 
-  <body>
+  <body class="bg-white">
     {% include '_navbar.html' %}
     <!-- messages -->
 
