--- a/blog/templates/blog/comment_form.html
+++ b/blog/templates/blog/comment_form.html
@@ -11,7 +11,7 @@
       <form   method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media }}
-        {{ form|crispy }}
+        {{ comment_form|crispy }}
         <input type="submit" class="btn btn-lg btn-primary" value="share">
       </form>
     </div>
