--- a/main/templates/main/cart.html
+++ b/main/templates/main/cart.html
@@ -123,7 +123,7 @@
 
           <div class="checkout_btn_inner float-right">
             <a class="btn_1" href="{% url 'main:home' %}">Continue Shopping</a>
-            <a class="btn_1 checkout_btn_1" href="#">Proceed to checkout</a>
+            <a class="btn_1 checkout_btn_1" href="{% url 'main:checkout' %}">Proceed to checkout</a>
           </div>
         </div>
       </div>
