--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -66,8 +66,9 @@
     </div>
     <div class="search_input" id="search_input_box">
         <div class="container ">
-            <form class="d-flex justify-content-between search-inner">
-                <input type="text" class="form-control" id="search_input" placeholder="Search Here">
+            <form class="d-flex justify-content-between search-inner" action='/search/'>
+                
+                <input type="text" class="form-control" id="search_input" placeholder="Search Here" name='q'>
                 <button type="submit" class="btn"></button>
                 <span class="ti-close" id="close_search" title="Close Search"></span>
             </form>
